public/css/styles.css
body {
    background-color: #00b25c;
}

.clear {
    margin: 0;
    padding: 0;
}

.dblue-bg {
    background:linear-gradient(to bottom, #00ff83, #00b25c);
    padding-top:60px;
}

#logo.row {
    margin-bottom:0;
}

#logo-img {
    max-width:80%;
}

#start-creation .row {
    position:relative;
    top:-40px;
}

#mission-statements {
    font-size:16px;
    line-height:32px;
}

.card-title {
    display:inline-block;
    padding-bottom:20px;
}

.clear-vertical {
    margin:0;
    padding:0;
}

#sign {
    padding-bottom:20px;
}

#call-to-action {
    margin-bottom:0;
}

.purple-bg {
    background:linear-gradient(to right, #5e35b1, #7e57c2);
}

label[for$="account"],
label[for$="event"] {
    font-size:1.03em;
}

.side-nav {
    background:#00c853;
    padding-top:10px;
}

.inline-block {
    display:inline-block;
}

.nav-img {
    display:inline-block;
    margin-left:0;
    margin-top:3px;
    padding:9px;
    max-width:50px;
    max-height:50px;
}

@media (min-width:480px) {
    .nav-img {
        margin-left:20px;
        margin-top:5px;
    }

    .guests {
          columns:2;
          -webkit-columns: 2;
          -moz-columns: 2;
    }

}


body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
  }

  main {
    flex: 1 0 auto;
  }



/*helpers*/

.margin-t-1 {
    margin-top:10px;
}

.margin-t-2 {
    margin-top:20px;
}

.margin-t-3 {
    margin-top:30px;
}

.margin-t-4 {
    margin-top:40px;
}

.margin-t-5 {
    margin-top:50px;
}

.margin-t-6 {
    margin-top:60px;
}

.margin-l-1 {
    margin-left:10px;
}

.margin-l-2 {
    margin-left:20px;
}

.margin-l-3 {
    margin-left:30px;
}

.margin-l-4 {
    margin-left:40px;
}

.margin-l-5 {
    margin-left:50px;
}

.margin-l-6 {
    margin-left:60px;
}

.margin-l-7 {
    margin-left:70px;
}

.margin-l-8 {
    margin-left:80px;
}

.margin-b-1 {
    margin-bottom:10px;
}

.margin-b-2 {
    margin-bottom:20px;
}

.margin-b-3 {
    margin-bottom:30px;
}

.margin-b-4 {
    margin-bottom:40px;
}

.margin-b-5 {
    margin-bottom:50px;
}

.margin-b-6 {
    margin-bottom:60px;
}

.reduce-h4-4 {
    font-size:1.5em;
}

.em0p7 {
    font-size:0.7em;
}

datalist {
    margin: 0;
    padding: 0;
}

.selectize-dropdown-content * {
    font-size: 0.9rem;
}

.selectize-input.items span {
    font-size: 0.9rem;
    max-width: auto;
}

.guest-item .name {
    color: #0288d1;
}

.guest-item .remove {
    position: absolute;
    right: 10px;
    top: 0;
    padding: 5px 0 0 0;
    margin: 0;
}

.guest-selectable .label {
    color:rgba(100,100,120,0.6);
}

.editable {
    width:auto;
    max-width:auto;
    min-width:auto;
}

.editable:focus, 
.editable:active {
    outline:none;
    color:#00e676;
}

.editable::-moz-selection { /* Code for Firefox */
    color: #00e676; 
    background-color: #ede7f6;
}

.editable::selection {
    color: #00e676; 
    background-color: #ede7f6;
}

.card-padding {
    padding:10px;
}


#profile-image {
    border:1px solid white;
    width:128px;
    height:128px;
    position:absolute;
    bottom:calc(128px/1.62*-1);
    left:0;
    right:0;
    margin:0 auto;
}

.big-square {
    position:relative;
    height:100px;
    width:100%;
    margin-bottom:calc((128px/1.62) + 10px);
}

.icon-container {
    display:inline-block;
    padding:2px;
}

#personal-bio:focus {
  border-bottom: 1px solid #673ab7;
  -webkit-box-shadow: 0 1px 0 0 #673ab7;
  -moz-box-shadow: 0 1px 0 0 #673ab7;
  box-shadow: 0 1px 0 0 #673ab7;
}

input[type='email'][id$='account']:focus,
input[type='email'][id$='account']:focus,
input[id$='event']:focus, 
input[id$='event']:focus {
  border-bottom: 1px solid #673ab7;
  -webkit-box-shadow: 0 1px 0 0 #673ab7;
  -moz-box-shadow: 0 1px 0 0 #673ab7;
  box-shadow: 0 1px 0 0 #673ab7;
}

#spinnerdiv {
    position:fixed;
    z-index:1002;
    height:100%;
    min-height:100%;
    width:100%;
    min-width:100%;
    top:0;
    left:0;
    background-color:#5e35b1;
}

#main {
    position:relative;
}

#events-list-div {
    position:relative;
}

#spinnerdiv-white {
    position:absolute;
    z-index:1000;
    width:100%;
    min-width:100%;
    top:0;
    left:0;
    background-color:#fff;
}

.fixed-hg-spinner {
    height:100px;
}

#spinner {
    position:relative;
    z-index:1001;
}

#spinner-green {
    position:relative;
    z-index:1001;
}

#event-solo,
#event-social {
    position:relative;
    min-width:100%;
    width:100%;
}

#success-submit {
    position:absolute;
    z-index:1000;
    width:100%;
    min-width:100%;
    top:0;
    left:0;
    background-color:#fff;
    visibility:hidden;
}

#success-message {
    position:relative;
}

